--- a/src/scss/responsive.scss
+++ b/src/scss/responsive.scss
@@ -2,6 +2,13 @@
   #review-head #review-name {
     min-width: 10% !important;
   }
+
+  .modal-body {
+    padding: 50px 60px !important;
+  }
+  .form-row.btn {
+    width: 500px !important;
+  }
 }
 
 @media screen and (max-width: 1149px) {
@@ -10,7 +17,7 @@
   }
 }
 
-@media screen and (max-width: 949px) {
+@media screen and (max-width: 972px) {
   #restaurant-container {
     width: 100% !important;
   }
@@ -29,6 +36,13 @@
   }
   #review-head #review-name {
     min-width: 10% !important;
+  }
+  .form-row {
+    grid-template-columns: 4fr !important;
+    grid-gap: 5px !important;
+  }
+  input[name="name"] {
+    width: 350px !important;
   }
 }
 
@@ -52,8 +66,31 @@
   }
 }
 
-@media screen and (max-width: 556px) {
+@media screen and (max-width: 596px) {
   #review-head #review-name {
     min-width: 20% !important;
   }
-} 
+
+  input[name="name"] {
+    width: 200px !important;
+  }
+
+  .comments-textarea {
+    width: 250px !important;
+  }
+  .form-row.btn {
+    width: 200px !important;
+  }
+  .modal-content .modal-header h2 {
+    font-size: 0.9em !important;
+  }
+  .comments-textarea:focus ~ .bar:before {
+    width: 50% !important;
+  }
+}
+
+@media screen and (max-width: 375px) {
+  .comments-textarea {
+    width: 200px !important;
+  }
+}
