--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -200,8 +200,9 @@ nav h1 a {
   overflow-y: hidden;
   background-color: #f3f3f3;
   list-style: outside none none;
-  padding: 20px 15px;
-  text-align: center; }
+  padding: 40px 15px;
+  text-align: center;
+  margin-bottom: 0; }
 
 #restaurants-list li {
   background-color: #fff;
@@ -371,7 +372,23 @@ nav h1 a {
   flex-flow: column;
   align-items: center;
   border-bottom: 1px solid rgba(0, 0, 0, 0.2);
+  position: relative;
   margin-bottom: 10px; }
+
+#favoriteBtn {
+  position: relative;
+  margin-right: auto;
+  margin-left: 30px; }
+
+.fas.fa-heart {
+  position: absolute;
+  font-size: 40px;
+  color: #ddd;
+  transition: 0.3s;
+  cursor: pointer; }
+
+.fas.fa-heart:hover {
+  color: #e42727 !important; }
 
 .accordion-container {
   display: grid;
@@ -429,10 +446,39 @@ nav h1 a {
   align-items: center;
   margin-bottom: 100px; }
 
+.reviews-head {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  padding: 15px;
+  position: relative; }
+
 #reviews-icon {
-  width: 20%;
-  height: 20%;
-  margin-top: 20px; }
+  width: 75%;
+  height: 75%;
+  margin-top: 20px;
+  align-self: flex-end;
+  margin: 0 auto; }
+
+.add-review-btn {
+  position: absolute;
+  left: 35px;
+  height: 55px;
+  width: 165px;
+  background: #252831;
+  border-radius: 75px;
+  box-shadow: 0 2px 5px 0 rgba(0, 4, 7, 0.302), 0 1px 3px 1px rgba(60, 64, 67, 0.149);
+  border: none;
+  font-size: 17px;
+  color: #fff;
+  cursor: pointer;
+  transition: 0.3s; }
+
+.add-review-btn:focus {
+  outline: none; }
+
+.add-review-btn:hover {
+  box-shadow: none; }
 
 #reviews-container h3 {
   color: #fa882d;
@@ -511,3 +557,267 @@ nav h1 a {
 #restaurant-hours td {
   color: #666;
   padding: 7px; }
+
+/* ==== ADD A REVIEW / MODAL ===== */
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  z-index: 1111;
+  background: rgba(0, 0, 0, 0.6);
+  animation: openModal 0.5s; }
+
+.modal-content {
+  background-color: #f3f3f3;
+  margin: 10% auto;
+  width: 70%;
+  border-radius: 5px;
+  border: 3px solid #252831;
+  box-shadow: 0 19px 28px rgba(0, 0, 0, 0.3), 0 15px 12px rgba(0, 0, 0, 0.22); }
+
+.modal-content .modal-header {
+  position: relative;
+  height: 50px;
+  background: #252831;
+  color: #fff;
+  font-size: 1em;
+  font-weight: 200;
+  letter-spacing: 7px;
+  text-transform: uppercase;
+  padding: 10px 20px;
+  text-align: center;
+  display: flex;
+  align-items: center;
+  justify-content: center; }
+
+.modal-content .modal-header h2 {
+  margin: 0; }
+
+.close-btn {
+  position: absolute;
+  right: 10px;
+  top: 10px;
+  font-size: 1.9em;
+  color: #ddd;
+  transition: 0.3s;
+  cursor: pointer; }
+
+.close-btn:hover {
+  color: #fff; }
+
+.modal-body {
+  padding: 45px 20px; }
+
+.modal-body .addReview-form {
+  display: flex;
+  flex-flow: column;
+  align-items: center; }
+
+.form-row {
+  display: grid;
+  grid-template-columns: 3fr 1fr;
+  margin-bottom: 15px;
+  grid-gap: 35px;
+  align-items: center; }
+
+.form-group {
+  position: relative; }
+
+input[name="name"] {
+  font-size: 18px;
+  padding: 23px 0px 5px 5px;
+  display: block;
+  width: 99%;
+  border: none;
+  border-bottom: 1px solid #ddd;
+  background: #fff;
+  font-weight: 400;
+  transition: 0.3s;
+  border-top-right-radius: 7px;
+  border-top-left-radius: 7px; }
+
+input[name="name"]:focus {
+  outline: none; }
+
+.form-group label {
+  color: #999;
+  font-size: 18px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 10px;
+  top: 15px;
+  transition: 0.4s ease all; }
+
+input[name="name"]:focus ~ label,
+input[name="name"]:valid ~ label {
+  top: 3px;
+  font-size: 14px;
+  color: #9a4e12; }
+
+.bar {
+  position: relative;
+  display: block;
+  width: 100%; }
+
+.bar:before,
+.bar:after {
+  content: "";
+  height: 2px;
+  width: 0;
+  bottom: 1px;
+  position: absolute;
+  background: #9a4e12;
+  transition: 0.2s ease all; }
+
+.bar:before {
+  left: 50%; }
+
+.bar:after {
+  right: 50%; }
+
+input[name="name"]:focus ~ .bar:before,
+input:focus ~ .bar:after {
+  width: 50%; }
+
+.comments-textarea {
+  font-size: 18px;
+  padding: 23px 0px 15px 5px;
+  display: block;
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid #ddd;
+  background: #fff;
+  font-weight: 400;
+  transition: 0.3s;
+  border-top-right-radius: 7px;
+  border-top-left-radius: 7px; }
+
+.comments-textarea:focus {
+  outline: none; }
+
+.form-group-textarea {
+  position: relative; }
+
+.form-group-textarea label {
+  color: #999;
+  font-size: 18px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 10px;
+  top: 15px;
+  transition: 0.4s ease all; }
+
+.comments-textarea:focus ~ label,
+.comments-textarea:valid ~ label {
+  top: 3px;
+  font-size: 14px;
+  color: #9a4e12; }
+
+.comments-textarea:focus ~ .bar:before {
+  width: 51%; }
+
+.comments-textarea:focus ~ .bar:after {
+  width: 50%; }
+
+.rating-select {
+  cursor: pointer; }
+
+.fas.fa-star {
+  font-size: 24px;
+  color: #ddd;
+  transition: 0.1s; }
+
+.fas.fa-star:hover {
+  border-color: #fbcd28; }
+
+.fas.fa-star.rated {
+  color: #fbcd28; }
+
+.form-row.btn {
+  width: 400px; }
+
+#selectRatingTxt {
+  font-weight: 600; }
+
+.submitReview-btn {
+  margin-bottom: 15px;
+  background-color: #252831;
+  border-radius: 3px;
+  color: #fff;
+  display: inline-block;
+  font-size: 10pt;
+  margin: 15px 0 0;
+  padding: 12px 0;
+  text-align: center;
+  text-decoration: none;
+  text-transform: uppercase;
+  letter-spacing: 4px;
+  border: none;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.37);
+  transition: 0.3s;
+  padding: 15px;
+  cursor: pointer; }
+
+.submitReview-btn:hover {
+  box-shadow: none; }
+
+.submitReview-btn:focus {
+  outline: none; }
+
+.snackbar-msg {
+  position: fixed;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  z-index: 999999;
+  bottom: 3%;
+  left: 3%;
+  min-width: 205px;
+  font-size: 19px;
+  padding: 20px;
+  background: #252831;
+  color: #fff;
+  font-weight: 600;
+  line-height: 2;
+  border-radius: 5px;
+  overflow: hidden;
+  transition: 0.1s;
+  -moz-box-shadow: 0 0 5px rbba(0, 0, 0, 0.4);
+  box-shadow: 0 0 5px rbba(0, 0, 0, 0.4);
+  opacity: 1;
+  transform: translateY(150px); }
+
+.snackbar-msg.activate {
+  animation: slideDown 7.5s 0.1s 1 ease forwards; }
+
+.snackbar-dismiss {
+  margin-left: 20px;
+  color: orange;
+  letter-spacing: 2px;
+  font-weight: 100;
+  transition: 0.3s;
+  padding: 0 10px;
+  border-radius: 3px;
+  cursor: pointer; }
+
+.snackbar-dismiss:hover {
+  background: rgba(255, 165, 0, 0.1); }
+
+@keyframes openModal {
+  from {
+    opacity: 0; }
+  to {
+    opacity: 1; } }
+
+@keyframes slideDown {
+  0%,
+  100% {
+    transform: translateY(150px); }
+  10%,
+  90% {
+    transform: translateY(0px); } }
