--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -378,7 +378,8 @@ nav h1 a {
 #favoriteBtn {
   position: relative;
   margin-right: auto;
-  margin-left: 30px; }
+  margin-left: 30px;
+  margin-bottom: 30px; }
 
 .fas.fa-heart {
   position: absolute;
@@ -694,7 +695,9 @@ input:focus ~ .bar:after {
   font-weight: 400;
   transition: 0.3s;
   border-top-right-radius: 7px;
-  border-top-left-radius: 7px; }
+  border-top-left-radius: 7px;
+  resize: none;
+  overflow: auto; }
 
 .comments-textarea:focus {
   outline: none; }
@@ -717,6 +720,9 @@ input:focus ~ .bar:after {
   top: 3px;
   font-size: 14px;
   color: #9a4e12; }
+
+.comments-textarea ~ label {
+  transition: 0.1s; }
 
 .comments-textarea:focus ~ .bar:before {
   width: 51%; }
@@ -790,7 +796,7 @@ input:focus ~ .bar:after {
   -moz-box-shadow: 0 0 5px rbba(0, 0, 0, 0.4);
   box-shadow: 0 0 5px rbba(0, 0, 0, 0.4);
   opacity: 1;
-  transform: translateY(150px); }
+  transform: translateY(250px); }
 
 .snackbar-msg.activate {
   animation: slideDown 7.5s 0.1s 1 ease forwards; }
@@ -817,7 +823,7 @@ input:focus ~ .bar:after {
 @keyframes slideDown {
   0%,
   100% {
-    transform: translateY(150px); }
+    transform: translateY(250px); }
   10%,
   90% {
     transform: translateY(0px); } }
