final push - all requirements hit

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,12 +20,6 @@ body {
   width: 100%;
   overflow-x: hidden; }
 
-/* .inside .wrapper {
-  width: 100%;
-  height: 100%;
-  position: relative;
-  overflow-x: hidden;
-} */
 ul,
 li {
   font-family: Arial, Helvetica, sans-serif;
@@ -66,6 +60,9 @@ menu,
 nav,
 section {
   display: block; }
+
+.leaflet-container a {
+  color: #0a3648 !important; }
 
 #maincontent {
   background-color: #f3f3f3;
@@ -386,6 +383,7 @@ nav h1 a {
   font-size: 40px;
   color: #ddd;
   transition: 0.3s;
+  outline: none;
   cursor: pointer; }
 
 .fas.fa-heart:hover {
@@ -552,7 +550,7 @@ nav h1 a {
   overflow: hidden;
   position: relative;
   max-width: 100%;
-  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+  box-shadow: 0 0 4px 0 rgba(17, 22, 26, 0.16), 0 2px 4px 0 rgba(17, 22, 26, 0.08), 0 4px 8px 0 rgba(17, 22, 26, 0.08);
   transition: all 0.3s cubic-bezier(0.25, 0.8, 0.25, 1); }
 
 #reviews-list li p {
@@ -607,6 +605,8 @@ nav h1 a {
   font-size: 1.9em;
   color: #ddd;
   transition: 0.3s;
+  background: none;
+  border: none;
   cursor: pointer; }
 
 .close-btn:hover {
@@ -732,19 +732,46 @@ input:focus ~ .bar:after {
 .comments-textarea:focus ~ .bar:after {
   width: 50%; }
 
-.rating-select {
-  cursor: pointer; }
+.rating {
+  display: flex;
+  flex-direction: row-reverse; }
 
-.fas.fa-star {
-  font-size: 24px;
-  color: #ddd;
-  transition: 0.1s; }
+.rating input {
+  clip-path: polygon(0 0);
+  width: 1px; }
 
-.fas.fa-star:hover {
-  border-color: #fbcd28; }
+.rating label {
+  display: block;
+  cursor: pointer;
+  width: 25px;
+  position: relative; }
 
-.fas.fa-star.rated {
-  color: #fbcd28; }
+.rating label:before {
+  content: "\f005";
+  font-family: "Font Awesome\ 5 Free";
+  font-weight: 900;
+  position: relative;
+  display: block;
+  font-size: 25px;
+  color: #ddd; }
+
+.rating label:after {
+  content: "\f005";
+  font-family: "Font Awesome\ 5 Free";
+  font-weight: 900;
+  position: absolute;
+  display: block;
+  font-size: 25px;
+  color: #fbcd28;
+  top: 0;
+  opacity: 0;
+  transition: 0.5s;
+  text-shadow: 0 2px 5px rgba(0, 0, 0, 0.5); }
+
+.rating label:hover:after,
+.rating label:hover ~ label:after,
+.rating input:checked ~ label:after {
+  opacity: 1; }
 
 .form-row.btn {
   width: 400px; }
