--- a/src/scss/responsive.scss
+++ b/src/scss/responsive.scss
@@ -6,14 +6,22 @@
   .modal-body {
     padding: 50px 60px !important;
   }
+
+  .comments-textarea {
+    width: 470px !important;
+  }
+
   .form-row.btn {
-    width: 500px !important;
+    width: 600px !important;
   }
 }
 
 @media screen and (max-width: 1149px) {
   #restaurants-list {
     grid-template-columns: 1fr 1fr;
+  }
+  .comments-textarea {
+    width: 470px !important;
   }
 }
 
@@ -37,12 +45,20 @@
   #review-head #review-name {
     min-width: 10% !important;
   }
+  .rating-container {
+    display: flex;
+    flex-flow: column;
+    align-items: flex-start;
+  }
   .form-row {
     grid-template-columns: 4fr !important;
     grid-gap: 5px !important;
   }
   input[name="name"] {
-    width: 350px !important;
+    width: 370px !important;
+  }
+  .comments-textarea {
+    width: 370px !important;
   }
 }
 
